Adwaita: correct spacing for mixed buttons

--- a/gtk/theme/Adwaita/_common.scss
+++ b/gtk/theme/Adwaita/_common.scss
@@ -461,8 +461,23 @@ button {
       // to have the image-button padding, while the text side the text-button
       // one, so we're adding the missing padding to the label depending on
       // its position inside the button
-      label:first-child { padding-left: 8px; }
-      label:last-child { padding-right: 8px; }
+      padding-left: 0;
+      padding-right: 0;
+
+      label:first-child {
+        padding-left: 16px;
+        padding-right: 0;
+      }
+
+      label:last-child {
+        padding-left: 0;
+        padding-right: 16px;
+      }
+
+      image {
+        padding-left: 8px;
+        padding-right: 8px;
+      }
     }
   }
 
